--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-modal": "^13.0.1",
     "react-native-popup-menu": "^0.16.1",
